crates/math-core/tests/snapshots/conversion_test__plus_subscript_before_eof.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x+_2
---
<math>
    <mi>x</mi>
    <msub>
        <mo lspace="0" rspace="0">+</mo>
        <mn>2</mn>
    </msub>
</math>
