crates/math-core/tests/snapshots/conversion_test__plus_subscript_before_letter.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x+_2 y
---
<math>
    <mi>x</mi>
    <msub>
        <mo>+</mo>
        <mn>2</mn>
    </msub>
    <mi>y</mi>
</math>
