crates/math-core/tests/snapshots/conversion_test__plus_subsup_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "x+_{2}^{3})"
---
<math>
    <mi>x</mi>
    <msubsup>
        <mo lspace="0" rspace="0">+</mo>
        <mn>2</mn>
        <mn>3</mn>
    </msubsup>
    <mo stretchy="false">)</mo>
</math>
