crates/math-core/tests/snapshots/conversion_test__plus_superscript_before_closing_paren.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: x+^2)
---
<math>
    <mi>x</mi>
    <msup>
        <mo lspace="0" rspace="0">+</mo>
        <mn>2</mn>
    </msup>
    <mo stretchy="false">)</mo>
</math>
