crates/math-core/tests/snapshots/conversion_test__pod.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "a \\equiv b \\pod{m}"
---
<math>
    <mi>a</mi>
    <mo>≡</mo>
    <mi>b</mi>
    <mspace width="0.44444445em"/>
    <mo stretchy="false">(</mo>
    <mi>m</mi>
    <mo stretchy="false">)</mo>
</math>
