crates/math-core/tests/snapshots/conversion_test__pod_display_style.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\displaystyle a \\equiv b \\pod{m}"
---
<math>
    <mrow displaystyle="true" scriptlevel="0">
        <mi>a</mi>
        <mo>≡</mo>
        <mi>b</mi>
        <mspace width="1em"/>
        <mo stretchy="false">(</mo>
        <mi>m</mi>
        <mo stretchy="false">)</mo>
    </mrow>
</math>
