crates/math-core/tests/snapshots/conversion_test__prescript.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\prescript{1}{2}{\\frac{a}{b}}"
---
<math>
    <mmultiscripts>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mprescripts/>
        <mn>2</mn>
        <mn>1</mn>
    </mmultiscripts>
</math>
