crates/math-core/tests/snapshots/conversion_test__prescript_2.snap
---
source: crates/math-core/tests/conversion_test.rs
expression: "\\prescript{}{2}{\\frac{a}{b}}"
---
<math>
    <mmultiscripts>
        <mfrac>
            <mi>a</mi>
            <mi>b</mi>
        </mfrac>
        <mprescripts/>
        <mn>2</mn>
        <mrow>
        </mrow>
    </mmultiscripts>
</math>
